--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,13 @@
-<p>
-  header works!
-</p>
+<header>
+    <nav class="nav-bar">
+  	  <a href="#about-me" class="nav-link">About Me</a>
+  	  <a href="#portfolio" class="nav-link">Portfolio</a>
+      <a href="#education" class="nav-link">Education</a>
+  	  <a href="#contact" class="nav-link">Contact</a>
+    </nav>
+
+    <div class="head-main">
+      <h1 class="name">Andre Thomas</h1>
+      <h2 class="kicker">Web Developer | Programmer | Engineer</h2>
+    </div>
+  </header>
