initial about commit

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,8 @@
-<p>
-  about works!
-</p>
+<section class="about-container">
+  <h1 class="about-header">About Me</h1>
+  <div class="border-bottom"></div>
+  <div class="profile-picture"></div>
+  <div class="about-text">
+    <p>Hi, I am <strong>Andre Thomas</strong>, a Software Engineer with extensive experience developing responsive and dynamic web applications. Familiar with modern programming languages/frameworks including but not limited to JavaScript, jQuery, Node, Angular, PHP, Java, HTML and CSS/SASS. Comfortable with Git workflow, agile development methodologies, and test-driven development.</p>
+  </div>
+</section>
