--- a/src/app/shared-styles/sass.scss
+++ b/src/app/shared-styles/sass.scss
@@ -1,7 +1,8 @@
 // Colors
-$gray: rgba(0, 0, 0, .7);
-$dark-gray: rgba(0, 0, 0, 1);
+$gray: #333;
 $white: #fff;
+$light-section-background: #f7f3f7;
+$dark-red: #c0392b;
 
 // Viewports
 $viewport-tablet: 480px;
@@ -13,4 +14,9 @@ $viewport-desktop: 1140px;
 
 a {
   text-decoration: none;
+}
+
+section {
+  padding-bottom: 50px;
+  padding-top: 50px;
 }
