--- a/src/app/shared-styles/sass.scss
+++ b/src/app/shared-styles/sass.scss
@@ -3,6 +3,7 @@ $gray: #333;
 $white: #fff;
 $light-section-background: #f7f3f7;
 $dark-red: #c0392b;
+$dark-blue: #2c3e50;
 
 // Viewports
 $viewport-tablet: 480px;
@@ -10,6 +11,7 @@ $viewport-desktop: 1140px;
 
 * {
   font-weight: 300;
+  color: $dark-blue;
 }
 
 a {
