--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,3 +1,29 @@
-<p>
-  portfolio works!
-</p>
+<section class="portfolio-container">
+  <div class="header-wrapper">
+    <h1 class="section-header">Portfolio</h1>
+    <div class="border-bottom"></div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-md-4 project">
+
+      </div>
+      <div class="col-xs-12 col-md-4 project">
+
+      </div>
+      <div class="col-xs-12 col-md-4 project">
+
+      </div>
+      <div class="col-xs-12 col-md-4 project">
+
+      </div>
+      <div class="col-xs-12 col-md-4 project">
+
+      </div>
+      <div class="col-xs-12 col-md-4 project">
+
+      </div>
+    </div>
+  </div>
+</section>
