--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,6 +1,8 @@
 <section class="skills-container">
-  <h1 class="skills-header">Skills</h1>
-  <div class="border-bottom"></div>
+  <div class="header-wrapper">
+    <h1 class="section-header">Skills</h1>
+    <div class="border-bottom"></div>
+  </div>
 
   <div class="container">
     <div class="row">
