set up portfolio project images

--- a/src/app/header/styles/mobile.scss
+++ b/src/app/header/styles/mobile.scss
@@ -4,7 +4,7 @@ $lighter-gray-gradient: rgba(0, 0, 0, .3);
 $light-gray-gradient: rgba(0, 0, 0, .3);
 
 header {
-  background-image: linear-gradient($lighter-gray-gradient, $light-gray-gradient), url('../shared-styles/images/mountain-background.jpg');
+  background-image: linear-gradient($lighter-gray-gradient, $light-gray-gradient), url('../../assets/images/mountain-background.jpg');
   background-position: center;
   background-size: cover;
   box-shadow: 0 5px 5px -5px $gray;
