--- a/src/app/about/styles/mobile.scss
+++ b/src/app/about/styles/mobile.scss
@@ -13,7 +13,7 @@
   }
 
   .profile-picture {
-    background: url('../shared-styles/images/profile-picture.jpg');
+    background: url('../../assets/images/profile-picture.jpg');
     background-size: cover;
     border-radius: 100%;
     height: 180px;
