--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -4,25 +4,25 @@
     <div class="border-bottom"></div>
   </div>
 
-  <div class="container">
+  <div class="container project-wrapper">
     <div class="row">
-      <div class="col-xs-12 col-md-4 project">
-
+      <div class="col-xs-12 col-sm-4 col-lg-4 project">
+        <div class="image"></div>
       </div>
-      <div class="col-xs-12 col-md-4 project">
-
+      <div class="col-xs-12 col-sm-4 col-lg-4 project">
+        <div class="image2"></div>
       </div>
-      <div class="col-xs-12 col-md-4 project">
-
+      <div class="col-xs-12 col-sm-4 col-lg-4 project">
+        <div class="image"></div>
       </div>
-      <div class="col-xs-12 col-md-4 project">
-
+      <div class="col-xs-12 col-sm-4 col-lg-4 project">
+        <div class="image2"></div>
       </div>
-      <div class="col-xs-12 col-md-4 project">
-
+      <div class="col-xs-12 col-sm-4 col-lg-4 project">
+        <div class="image"></div>
       </div>
-      <div class="col-xs-12 col-md-4 project">
-
+      <div class="col-xs-12 col-sm-4 col-lg-4 project">
+        <div class="image2"></div>
       </div>
     </div>
   </div>
