--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -6,23 +6,47 @@
 
   <div class="container project-wrapper">
     <div class="row">
-      <div class="col-xs-12 col-sm-4 col-lg-4 project">
-        <div class="image"></div>
+      <div class="col-xs-6 col-sm-4 project">
+        <div class="projectImage projectImage1">
+          <div class="projectOverlay">
+            <strong>Twitter Clone</strong>
+          </div>
+        </div>
       </div>
-      <div class="col-xs-12 col-sm-4 col-lg-4 project">
-        <div class="image2"></div>
+      <div class="col-xs-6 col-sm-4 project">
+        <div class="projectImage projectImage2">
+          <div class="projectOverlay">
+            <strong>Todo List</strong>
+          </div>
+        </div>
       </div>
-      <div class="col-xs-12 col-sm-4 col-lg-4 project">
-        <div class="image"></div>
+      <div class="col-xs-6 col-sm-4 project">
+        <div class="projectImage projectImage3">
+          <div class="projectOverlay">
+            <strong>Pong</strong>
+          </div>
+        </div>
       </div>
-      <div class="col-xs-12 col-sm-4 col-lg-4 project">
-        <div class="image2"></div>
+      <div class="col-xs-6 col-sm-4 project">
+        <div class="projectImage projectImage4">
+          <div class="projectOverlay">
+            <strong>TicTacToe</strong>
+          </div>
+        </div>
       </div>
-      <div class="col-xs-12 col-sm-4 col-lg-4 project">
-        <div class="image"></div>
+      <div class="col-xs-6 col-sm-4 project">
+        <div class="projectImage projectImage5">
+          <div class="projectOverlay">
+            <strong>Twitter</strong>
+          </div>
+        </div>
       </div>
-      <div class="col-xs-12 col-sm-4 col-lg-4 project">
-        <div class="image2"></div>
+      <div class="col-xs-6 col-sm-4 project">
+        <div class="projectImage projectImage6">
+          <div class="projectOverlay">
+            <strong>Safehouse Signs</strong>
+          </div>
+        </div>
       </div>
     </div>
   </div>
