--- a/src/app/portfolio/styles/mobile.scss
+++ b/src/app/portfolio/styles/mobile.scss
@@ -12,9 +12,66 @@
 
   .project-wrapper {
     .project {
-      // padding: 0;
-      padding-bottom: 20px;
-      height: 250px;
+      height: 225px;
+      padding: 0;
+
+      .projectImage {
+        background-position: center;
+        background-size: cover;
+        height: 100%;
+        max-width: 100%;
+        overflow: hidden;
+        position: relative;
+
+        .projectOverlay {
+          background: #2c3e50;
+          height: 100%;
+        	opacity: .9;
+        	position: absolute;
+        	text-align: center;
+        	top: 100%;
+          transition-duration: .3s;
+          width: 100%;
+
+          strong {
+            color: white;
+          	display: block;
+            font-size: 36px;
+            font-weight: 300;
+            line-height: 1.2;
+            padding: 50px 50px 5px;
+          	text-transform: uppercase;
+          }
+        }
+
+        &:hover .projectOverlay {
+          top: 0%;
+        }
+      }
+
+      .projectImage1 {
+        background-image: url('../../assets/images/projects/twitter.png');
+      }
+
+      .projectImage2 {
+        background-image: url('../../assets/images/projects/todo.png');
+      }
+
+      .projectImage3 {
+        background-image: url('../../assets/images/projects/pong.png');
+      }
+
+      .projectImage4 {
+        background-image: url('../../assets/images/projects/tictactoe.png');
+      }
+
+      .projectImage5 {
+        background-image: url('../../assets/images/projects/twitter.png');
+      }
+
+      .projectImage6 {
+        background-image: url('../../assets/images/projects/safehouse.jpg');
+      }
     }
   }
 
