--- a/src/app/header/styles/mobile.scss
+++ b/src/app/header/styles/mobile.scss
@@ -1,8 +1,3 @@
-@import '../../shared-styles/sass';
-
-$lighter-gray-gradient: rgba(0, 0, 0, .3);
-$light-gray-gradient: rgba(0, 0, 0, .3);
-
 header {
   background-image: linear-gradient($lighter-gray-gradient, $light-gray-gradient), url('../../assets/images/mountain-background.jpg');
   background-position: center;
@@ -14,23 +9,47 @@ header {
   justify-content: center;
   position: relative;
 
-  .nav-bar {
-    float: right;
+  .hamburger-icon {
     position: absolute;
-    right: 30px;
-    top: 30px;
+    top: 35px;
+    right: 40px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+  }
 
-    .nav-link {
-      color: $white;
-      display: inline-block;
-      font-size: 13px;
-      margin-left: 10px;
-      opacity: 1;
-      text-transform: uppercase;
+  .nav-bar {
+    position: absolute;
+    top: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: $dark-blue;
+    //transition: .5s top ease-out;
 
-      &:hover {
-        border-bottom: solid 2px $white;
-        padding-bottom: 4px;
+    .close-icon {
+      position: absolute;
+      top: 35px;
+      right: 40px;
+      width: 30px;
+      height: 30px;
+      cursor: pointer;   
+    }
+
+    .nav-links {
+      margin-top: 80px;
+
+      .nav-link {
+        display: block;
+        color: $white;
+        font-size: 24px;
+        font-weight: 700;
+        text-transform: uppercase;
+        text-align: center;
+        padding: 10px;
+  
+        &:hover {
+          color: $dark-red;
+        }
       }
     }
   }
