--- a/src/app/shared-styles/sass.scss
+++ b/src/app/shared-styles/sass.scss
@@ -5,6 +5,8 @@ $light-section-background: #f7f3f7;
 $dark-red: #c0392b;
 $dark-blue: #2c3e50;
 $section-box-shadow: 0 .1px .1px -.1px $gray;
+$light-gray-gradient: rgba(0, 0, 0, .3);
+$lighter-gray-gradient: rgba(0, 0, 0, .3);
 
 // Viewports
 $viewport-tablet: 767px;
