--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,7 +4,21 @@
     <div class="border-bottom"></div>
   </div>
   <div class="profile-picture"></div>
-  <div class="about-text">
-    <p>Hi, I am <strong>Andre Thomas</strong>, a Software Engineer with extensive experience developing responsive and dynamic web applications. Familiar with modern programming languages/frameworks including but not limited to JavaScript, jQuery, Node, Angular, PHP, Java, HTML and CSS/SASS. Comfortable with Git workflow, agile development methodologies, and test-driven development.</p>
+  <div class="about-content">
+    <div class="about-text">
+      <p>Hi, I am <strong>Andre Thomas</strong>, a Software Engineer with extensive experience developing responsive and dynamic web applications. Familiar with modern programming languages/frameworks including but not limited to JavaScript, jQuery, Node, Angular, PHP, Java, HTML and CSS/SASS. Comfortable with Git workflow, agile development methodologies, and test-driven development.</p>
+    </div>
+    <div class="skills">
+      <div class="skill-components">
+        <app-skill [language]="'JavaScript'" [precentage]="'80%'"></app-skill><!--
+        --><app-skill [language]="'Angular'" [precentage]="'60%'"></app-skill><!--
+        --><app-skill [language]="'PHP'" [precentage]="'50%'"></app-skill><!--
+        --><app-skill [language]="'HTML'" [precentage]="'87%'"></app-skill><!--
+        --><app-skill [language]="'CSS'" [precentage]="'83%'"></app-skill><!--
+        --><app-skill [language]="'Wordpress'" [precentage]="'65%'"></app-skill><!--
+        --><app-skill [language]="'Node.js'" [precentage]="'33%'"></app-skill><!--
+        --><app-skill [language]="'Java'" [precentage]="'55%'"></app-skill>
+      </div>
+    </div>
   </div>
 </section>
