Remove skills section

--- a/src/app/shared-styles/sass.scss
+++ b/src/app/shared-styles/sass.scss
@@ -1,6 +1,7 @@
 // Colors
 $gray: #333;
 $white: #fff;
+$gold: #E29C45;
 $light-section-background: #f7f3f7;
 $dark-red: #c0392b;
 $dark-blue: #2c3e50;
