Add resume section

--- a/src/app/about/skill/styles/mobile.scss
+++ b/src/app/about/skill/styles/mobile.scss
@@ -12,6 +12,7 @@
         right: 10px;
         color: $gold;
         font-weight: 700;
+        font-size: 15px;
     }
 
     .skill-bar {
@@ -27,6 +28,7 @@
             color: $white;
             font-weight: 700;
             margin-left: 10px;
+            font-size: 15px;
         }
     }
 }
