Remote skills component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,13 +10,13 @@
       <div class="nav-links">
         <a href="#about-me" class="nav-link">About Me</a>
         <a href="#portfolio" class="nav-link">Portfolio</a>
-        <a href="#education" class="nav-link">Education</a>
+        <a href="#education" class="nav-link">Resume</a>
         <a href="#contact" class="nav-link">Contact</a>
       </div>
     </nav>
 
     <div class="head-main">
-      <h1 class="name">Andre Thomas</h1>
+      <h1 class="name">André Thomas</h1>
       <h2 class="kicker">Web Developer | Programmer | Engineer</h2>
     </div>
   </header>
