--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,7 +6,7 @@
   <div class="profile-picture"></div>
   <div class="about-content">
     <div class="about-text">
-      <p>Hi, I am <strong>Andre Thomas</strong>, a Software Engineer with extensive experience developing responsive and dynamic web applications. Familiar with modern programming languages/frameworks including but not limited to JavaScript, jQuery, Node, Angular, PHP, Java, HTML and CSS/SASS. Comfortable with Git workflow, agile development methodologies, and test-driven development.</p>
+      <p>Hi, I am <strong>André Thomas</strong>, a Software Engineer with extensive experience developing responsive and dynamic web applications. Familiar with modern programming languages/frameworks including but not limited to JavaScript, jQuery, Node, Angular, PHP, Java, HTML and CSS/SASS. Comfortable with Git workflow, agile development methodologies, and test-driven development.</p>
     </div>
     <div class="skills">
       <div class="skill-components">
