Add social media icons

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,22 @@
-<p>
-  contact works!
-</p>
+<section class="contact-container">
+  <div class="header-wrapper">
+    <h1 class="section-header">Contact</h1>
+    <div class="border-bottom"></div>
+  </div>
+  <div class="contact-content">
+    <form action="">
+      <input class="input" name="name" type="text" placeholder="Name">
+      <br>
+      <input class="input" name="email" type="text" placeholder="Enter email">
+      <br>
+      <textarea class="textarea" name="message" cols="30" rows="6" placeholder="Your Message"></textarea>
+      <button class="submit-button">Submit</button>
+    </form>
+    <div class="icons">
+      <a href="https://www.linkedin.com/in/andrethomas5/"><img src="../assets/icons/linkedin.png" class="icon linkedin"></a>
+      <a href="https://github.com/athomas5"><img src="../assets/icons/github.png" class="icon github"></a>
+      <a href="#"><img src="../assets/icons/google.png" class="icon google"></a>
+    </div>
+  </div>
+</section>
+  
