--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -21,7 +21,7 @@
         </div>
         <div class="divider"></div>
         <div class="resume-element">
-          <h3 class="position">Software Engineer Intern</h3>
+          <h3 class="position">Software Engineering Intern</h3>
           <p>Modea May 2017 - Aug 2017</p>
           <p>
             Worked closely with our project management, design team, and clients to build a brand new eCommerce website.
