--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,8 @@
-<p>
-  footer works!
-</p>
+<section class="footer-container">
+  <div class="footer-content">
+    <a href="#" class="footer-link">About Me</a>
+    <a href="#" class="footer-link">Portfolio</a>
+    <a href="#" class="footer-link">Resume</a>
+    <a href="#" class="footer-link">Contact</a>
+  </div>
+</section>
