--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <section class="about-container">
   <div class="header-wrapper">
-    <h1 class="section-header">About Me</h1>
+    <h1 id="about-me" class="section-header">About Me</h1>
     <div class="border-bottom"></div>
   </div>
   <div class="profile-picture"></div>
