--- a/src/app/about/styles/mobile.scss
+++ b/src/app/about/styles/mobile.scss
@@ -2,6 +2,7 @@
   background-color: $light-section-background;
   box-shadow: $section-box-shadow;
   text-align: center;
+  padding-top: 0;
 
   .header-wrapper {
     display: inline-block;
@@ -14,19 +15,11 @@
     background-size: cover;
     border-radius: 100%;
     height: 180px;
-    margin: 0 auto;
+    margin: 0 auto 20px;
     width: 180px;
   }
 
   .about-content {
-    padding: 40px;
-
-    .about-text {
-      margin-bottom: 30px;
-    }
-
-    .skills {
-      
-    }
+    .about-text { margin-bottom: 30px; }
   }
 }
