--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
 <section class="contact-container">
   <div class="header-wrapper">
-    <h1 class="section-header">Contact</h1>
+    <h1 id="contact" class="section-header">Contact</h1>
     <div class="border-bottom"></div>
   </div>
   <div class="contact-content">
