--- a/src/app/header/styles/mobile.scss
+++ b/src/app/header/styles/mobile.scss
@@ -2,6 +2,7 @@ header {
   background-image: linear-gradient($lighter-gray-gradient, $light-gray-gradient), url('../../assets/images/mountain-background.jpg');
   background-position: center;
   background-size: cover;
+  background-attachment: fixed;
   box-shadow: 0 5px 5px -5px $gray;
   display: flex;
   flex-direction: column;
@@ -24,7 +25,6 @@ header {
     width: 100%;
     height: 100%;
     background-color: $dark-blue;
-    //transition: .5s top ease-out;
 
     .close-icon {
       position: absolute;
