--- a/src/app/portfolio/styles/tablet.scss
+++ b/src/app/portfolio/styles/tablet.scss
@@ -1,17 +1,7 @@
 .portfolio-container {
   .project-wrapper {
     .project {
-      width: 30%;
-
-      &:nth-child(1),
-      &:nth-child(4) {
-        margin-left: 5%;
-      }
-
-      &:nth-child(3),
-      &:nth-child(6) {
-        margin-right: 5%;
-      }
+      width: 33.33333333%;
     }
   }
 }
