--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,6 +1,6 @@
 <section class="resume-container">
   <div class="header-wrapper">
-    <h1 class="section-header">Resume</h1>
+    <h1 id="resume" class="section-header">Resume</h1>
     <div class="border-bottom"></div>
   </div>
   <div class="resume-content">
