--- a/src/app/shared-styles/sass.scss
+++ b/src/app/shared-styles/sass.scss
@@ -29,6 +29,8 @@ $viewport-desktop: 1140px;
 
 .section-header {
   font-weight: 400;
+  margin-top: 0;
+  padding-top: 40px;
   padding-bottom: 20px;
 }
 
@@ -41,8 +43,7 @@ a {
 }
 
 section {
-  padding-bottom: 50px;
-  padding-top: 50px;
+  padding: 0 40px 40px;
 }
 
 .clearfix:afterS {
