--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -3,7 +3,7 @@
     <h1 id="resume" class="section-header">Resume</h1>
     <div class="border-bottom"></div>
   </div>
-  <div class="resume-content">
+  <div class="resume-content clearfix">
     <div class="work-section clearfix">
       <div class="col-left">
         <h2 class="resume-content-header">Work</h2>
@@ -43,5 +43,7 @@
         </div>
       </div>
     </div>
+
+    <a href="https://docs.google.com/document/d/1hH8-5uSCU_556y9dVYfEzdzFkMyB6EuzYRRgYf3JBLI/edit?usp=sharing" class="resume-button" target="_blank">View my CV</a>
   </div>
 </section>
