Remove smoothScroll function

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -13,9 +13,9 @@
       <button class="submit-button">Submit</button>
     </form>
     <div class="icons">
-      <a href="https://www.linkedin.com/in/andrethomas5/"><img src="../assets/icons/linkedin.png" class="icon linkedin"></a>
-      <a href="https://github.com/athomas5"><img src="../assets/icons/github.png" class="icon github"></a>
-      <a href="#"><img src="../assets/icons/google.png" class="icon google"></a>
+      <a href="https://www.linkedin.com/in/andrethomas5/" target="_blank"><img src="../assets/icons/linkedin.png" class="icon linkedin"></a>
+      <a href="https://github.com/athomas5" target="_blank"><img src="../assets/icons/github.png" class="icon github"></a>
+      <a href="#" target="_blank"><img src="../assets/icons/google.png" class="icon google"></a>
     </div>
   </div>
 </section>
