--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,10 +8,10 @@
         <app-svg [svgName]="'Close'" [style]="'light'"></app-svg>
       </div>
       <div class="nav-links">
-        <a href="#about-me" class="nav-link" (click)="smootScroll($event)">About Me</a>
-        <a href="#portfolio" class="nav-link" (click)="smootScroll($event)">Portfolio</a>
-        <a href="#resume" class="nav-link" (click)="smootScroll($event)">Resume</a>
-        <a href="#contact" class="nav-link" (click)="smootScroll($event)">Contact</a>
+        <a href="#about-me" class="nav-link">About Me</a>
+        <a href="#portfolio" class="nav-link">Portfolio</a>
+        <a href="#resume" class="nav-link">Resume</a>
+        <a href="#contact" class="nav-link">Contact</a>
       </div>
     </nav>
 
