Add portfolio-belt back button (svg)

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,8 @@
 <section class="footer-container">
   <div class="footer-content">
-    <a href="#" class="footer-link">About Me</a>
-    <a href="#" class="footer-link">Portfolio</a>
-    <a href="#" class="footer-link">Resume</a>
-    <a href="#" class="footer-link">Contact</a>
+    <a href="#about-me" class="footer-link">About Me</a>
+    <a href="#portfolio" class="footer-link">Portfolio</a>
+    <a href="#resume" class="footer-link">Resume</a>
+    <a href="#contact" class="footer-link">Contact</a>
   </div>
 </section>
