--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="header-container">
     <div class="hamburger-icon" (click)="showNavBar()">
       <app-svg [svgName]="'Hamburger'" [style]="'light'"></app-svg>
     </div>
