--- a/src/app/resume/styles/mobile.scss
+++ b/src/app/resume/styles/mobile.scss
@@ -37,21 +37,8 @@
         }
 
         .resume-button {
-            padding: 15px 25px;
             float: right;
-            background-color: transparent;
-            color: $dark-blue;
-            border: 2px solid $dark-blue;
-            outline: none;
-            font-weight: 700;
-            letter-spacing: 2px;
-            border-radius: 5px;
-
-            &:hover {
-                background-color: $dark-blue;
-                color: $white;
-                transition: .5s;
-            }
+            @include button($dark-blue);
         }
     }
 }
