--- a/src/app/about/styles/desktop.scss
+++ b/src/app/about/styles/desktop.scss
@@ -1,17 +1,16 @@
 .about-container {
 
     .about-content {
-        display: flex;
-    
         .about-text {
-          flex-grow: 1;
-          flex-basis: 0;
+          width: 48%;
+          float: left;
+          margin-right: 4%;
           font-size: 19px;
         }
 
         .skills {
-            flex-grow: 1;
-            flex-basis: 0;
+            width: 48%;
+            float: right;
         }
       }
   }
