--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,1 @@
-<app-header></app-header>
-
-<app-about></app-about>
-
-<app-portfolio></app-portfolio>
-
-<app-resume></app-resume>
-
-<app-contact></app-contact>
-
-<app-footer></app-footer>
+<router-outlet></router-outlet>
