--- a/src/app/portfolio/styles/mobile.scss
+++ b/src/app/portfolio/styles/mobile.scss
@@ -3,6 +3,7 @@
   text-align: center;
   padding-left: 0;
   padding-right: 0;
+  overflow-x: hidden;
 
   .header-wrapper {
     display: inline-block;
@@ -10,12 +11,47 @@
     .border-bottom { @include border-bottom(); }
   }
 
+  .portfolio-belt {
+    width: 200%;
+    position: relative;
+    left: -100%;
+    transition: 1s left ease;
+
+    .project-preview {
+      width: 50%;
+      float: right;
+
+      .back-button {
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        left: calc(50% + 90px);
+        top: $section-header-padding-top;
+        cursor: pointer;
+        opacity: .8;
+
+        &:hover {
+          opacity: 1;
+        }
+      }
+
+      .button {
+        width: 170px;
+        @include button($dark-blue);
+      }
+    }
+  }
+
   .project-wrapper {
+    width: 50%;
+    float: left;
+
     .project {
       float: left;
-      height: 225px;
+      height: 200px;
       padding: 0;
       width: 50%;
+      cursor: pointer;
 
       .projectImage {
         background-position: center;
