--- a/src/app/shared-styles/sass.scss
+++ b/src/app/shared-styles/sass.scss
@@ -12,6 +12,9 @@ $lighter-gray-gradient: rgba(0, 0, 0, .3);
 // Viewports
 $viewport-tablet: 767px;
 $viewport-desktop: 1140px;
+$section-padding: 100px;
+$section-header-padding-top: 40px;
+$section-header-padding-bottom: 20px;
 
 // Mixins
 @mixin border-bottom() {
@@ -19,6 +22,23 @@ $viewport-desktop: 1140px;
   margin: 0 auto;
   margin-bottom: 40px;
   width: 50%;
+}
+
+@mixin button($color) {
+  padding: 15px 25px;
+  background-color: transparent;
+  color: $color;
+  border: 2px solid $color;
+  outline: none;
+  font-weight: 700;
+  letter-spacing: 2px;
+  border-radius: 5px;
+
+    &:hover {
+      background-color: $color;
+      color: $white;
+      transition: .5s;
+  }
 }
 
 // Global styles
@@ -30,8 +50,8 @@ $viewport-desktop: 1140px;
 .section-header {
   font-weight: 400;
   margin-top: 0;
-  padding-top: 40px;
-  padding-bottom: 20px;
+  padding-top: $section-header-padding-top;
+  padding-bottom: $section-header-padding-bottom;
 }
 
 p {
@@ -43,10 +63,10 @@ a {
 }
 
 section {
-  padding: 0 40px 40px;
+  padding: 0 $section-padding $section-padding;
 }
 
-.clearfix:afterS {
+.clearfix:after {
   content: "";
   display: table;
   clear: both;
