--- a/src/app/shared/components/svg/svg.component.html
+++ b/src/app/shared/components/svg/svg.component.html
@@ -1,11 +1,17 @@
 <!-- Hamburger Menu -->
-<svg [ngClass]="{'fill-light': this.style === 'light'}" *ngIf="this.svgName === 'Hamburger'"   
+<svg [ngClass]="{'light': this.style === 'light'}" *ngIf="this.svgName === 'Hamburger'"   
     viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
     <path d="M1664 1344v128q0 26-19 45t-45 19h-1408q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1408q26 0 45 19t19 45zm0-512v128q0 26-19 45t-45 19h-1408q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1408q26 0 45 19t19 45zm0-512v128q0 26-19 45t-45 19h-1408q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1408q26 0 45 19t19 45z"/>
 </svg>
 
 <!-- Close -->
-<svg [ngClass]="{'fill-light': this.style === 'light'}" *ngIf="this.svgName === 'Close'"   
+<svg [ngClass]="{'light': this.style === 'light'}" *ngIf="this.svgName === 'Close'"   
     viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
     <path d="M1490 1322q0 40-28 68l-136 136q-28 28-68 28t-68-28l-294-294-294 294q-28 28-68 28t-68-28l-136-136q-28-28-28-68t28-68l294-294-294-294q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 294 294-294q28-28 68-28t68 28l136 136q28 28 28 68t-28 68l-294 294 294 294q28 28 28 68z"/>
+</svg>
+
+<!-- Back Button -->
+<svg [ngClass]="{'dark-blue': this.style === 'dark-blue'}" *ngIf="this.svgName === 'Back'" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
+    <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
+    <g><g><g><path d="M500,990C229.8,990,10,770.2,10,500C10,229.8,229.8,10,500,10c270.2,0,490,219.8,490,490C990,770.2,770.2,990,500,990z M500,69.3C262.5,69.3,69.3,262.5,69.3,500c0,237.5,193.2,430.7,430.7,430.7c237.5,0,430.8-193.2,430.8-430.7C930.7,262.5,737.5,69.3,500,69.3z"/><polygon points="538.4,685.3 385.5,500 538.4,314.7 584.1,352.4 462.3,500 584.1,647.6 "/></g></g><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/><g/></g>
 </svg>
